--- a/jboss-javaee-all/pom.xml
+++ b/jboss-javaee-all/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>jboss-javaee-all-5.0</artifactId>
+  <artifactId>jboss-javaee-5.0-all</artifactId>
   <packaging>jar</packaging>
 
   <name>JBoss Java EE 5 Specification APIs - All</name>
